--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Tendron</h1>
 		</header>
 			<section id="content">
 				<canvas id="Tendron" data-processing-sources="Tendron.pde Cluster.pde Tendril.pde">
